
[package]
name = "ethbridge-bridge-calls"
version = "0.7.0"
edition = "2021"

[features]


[dependencies]


ethbridge-structs = { path = "../ethbridge-structs", features = ["ethers-derive"] }



ethers = { version = "2.0.0", optional = false }



ethers-contract = { version = "2.0.0", optional = false }


