[dependencies.ethbridge-structs]
features = ["ethers-derive"]
path = "../ethbridge-structs"

[dependencies.ethers]
optional = false
version = "2.0.0"

[dependencies.ethers-contract]
optional = false
version = "2.0.0"

[features]

[package]
edition = "2021"
name = "ethbridge-bridge-calls"
version = "0.13.0"
