
[package]
name = "ethbridge-bridge-contract"
version = "0.4.0"
edition = "2021"

[features]


[dependencies]


ethbridge-bridge-events = { path = "../ethbridge-bridge-events" }



ethbridge-structs = { path = "../ethbridge-structs", features = ["ethers-derive"] }



ethers = { version = "1.0.2", optional = false }


