
[package]
name = "ethbridge-bridge-contract"
version = "0.7.0"
edition = "2021"

[features]


[dependencies]


ethbridge-bridge-events = { path = "../ethbridge-bridge-events", features = ["ethers-derive"] }



ethbridge-structs = { path = "../ethbridge-structs", features = [] }



ethers = { version = "2.0.0", optional = false }



ethers-contract = { version = "2.0.0", optional = false }


