[dependencies.ethbridge-bridge-events]
features = ["ethers-derive"]
path = "../ethbridge-bridge-events"

[dependencies.ethbridge-structs]
features = []
path = "../ethbridge-structs"

[dependencies.ethers]
optional = false
version = "2.0.0"

[dependencies.ethers-contract]
optional = false
version = "2.0.0"

[features]

[package]
edition = "2021"
name = "ethbridge-bridge-contract"
version = "0.22.0"
