
[package]
name = "ethbridge-bridge-events"
version = "0.6.0"
edition = "2021"

[features]

ethers-derive = ["ethers-contract"]


[dependencies]


ethbridge-structs = { path = "../ethbridge-structs", features = [] }



ethers = { version = "2.0.0", optional = false }



ethers-contract = { version = "2.0.0", optional = true }


