[dependencies.ethabi]
optional = false
version = "18.0.0"

[dependencies.ethbridge-structs]
features = []
path = "../ethbridge-structs"

[dependencies.ethers]
optional = true
version = "2.0.0"

[dependencies.ethers-contract]
optional = true
version = "2.0.0"

[features]
ethers-derive = [
    "ethers",
    "ethers-contract",
    "ethbridge-structs/ethers-derive",
]

[package]
edition = "2021"
name = "ethbridge-bridge-events"
version = "0.15.1"
