[dependencies.ethbridge-bridge-events]
features = ["ethers-derive"]
path = "../ethbridge-bridge-events"

[dependencies.ethbridge-governance-events]
features = ["ethers-derive"]
path = "../ethbridge-governance-events"

[dependencies.ethers]
optional = false
version = "2.0.0"

[features]

[package]
edition = "2021"
name = "ethbridge-events"
version = "0.13.0"
