
[package]
name = "ethbridge-governance-contract"
version = "0.5.0"
edition = "2021"

[features]


[dependencies]


ethbridge-governance-events = { path = "../ethbridge-governance-events" }



ethbridge-structs = { path = "../ethbridge-structs", features = ["ethers-derive"] }



ethers = { version = "2.0.0", optional = false }



ethers-contract = { version = "2.0.0", optional = false }


