
[package]
name = "ethbridge-governance-events"
version = "0.7.0"
edition = "2021"

[features]

ethers-derive = ["ethers", "ethers-contract", "ethbridge-structs/ethers-derive"]


[dependencies]


ethabi = { version = "18.0.0", optional = false }



ethbridge-structs = { path = "../ethbridge-structs", features = [] }



ethers = { version = "2.0.0", optional = true }



ethers-contract = { version = "2.0.0", optional = true }


