
[package]
name = "ethbridge-structs"
version = "0.7.0"
edition = "2021"

[features]

ethers-derive = ["ethers", "ethers-contract"]


[dependencies]


ethabi = { version = "18.0.0", optional = false }



ethers = { version = "2.0.0", optional = true }



ethers-contract = { version = "2.0.0", optional = true }


