[dependencies.ethabi]
optional = false
version = "18.0.0"

[dependencies.ethers]
optional = true
version = "2.0.0"

[dependencies.ethers-contract]
optional = true
version = "2.0.0"

[features]
ethers-derive = [
    "ethers",
    "ethers-contract",
]

[package]
edition = "2021"
name = "ethbridge-structs"
version = "0.7.1"
