[package]
name = "generate-ethbridge-crates"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
ethers-contract = { version = "1.0.2", features = ["abigen"] }
eyre = "0.6.8"
false = "0.0.0"
itertools = "0.10.5"
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
tera = "1.17.1"
