[package]
name = "generate-ethbridge-crates"
version = "0.7.1"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
ethers-contract = { version = "2.0.0", features = ["abigen"] }
eyre = "0.6.8"
false = "0.0.0"
itertools = "0.10.5"
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0.152", features = ["derive"] }
syn = { version = "1.0.109", features = ["full"] }
tempdir = "0.3.7"
tera = "1.17.1"
toml = "0.7.3"
